--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
 
         classpath 'com.android.tools.build:gradle:3.2.1'
-//        classpath 'com.aprz.module.manager:autoc:1.3.1-SNAPSHOT'
+        classpath 'com.aprz.module.manager:autoc:1.5.3'
         classpath 'com.novoda:bintray-release:0.9'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,6 +30,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-ext {
-
-}
