--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 22 21:44:44 CST 2018
-sdk.dir=/home/aprz/Android/SDK
+#Tue Nov 27 15:42:42 CST 2018
+sdk.dir=E\:\\Android\\Sdk
