修复无法识别外部组件的bug

--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,15 @@ buildscript {
         google()
         jcenter()
         maven {
-            url "https://dl.bintray.com/aprz512/gradle_plugins"
+//            url "https://dl.bintray.com/aprz512/gradle_plugins"
+            url "E:/maven/repository"
         }
     }
     dependencies {
 
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.aprz.module.manager:autoc:1.4.0'
+//        classpath 'com.aprz.module.manager:autoc:1.4.0'
+        classpath 'com.aprz.module.manager:autoc:1.5.4'
         classpath 'com.novoda:bintray-release:0.9'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,7 +27,8 @@ allprojects {
         google()
         jcenter()
         maven {
-            url "https://dl.bintray.com/aprz512/gradle_plugins"
+//            url "https://dl.bintray.com/aprz512/gradle_plugins"
+            url "E:/maven/repository"
         }
     }
 }
