--- a/autoc/build.gradle
+++ b/autoc/build.gradle
@@ -4,9 +4,9 @@ apply plugin: 'com.novoda.bintray-release'
 
 dependencies {
     //gradle sdk
-    compile gradleApi()
+    implementation gradleApi()
     //groovy sdk
-    compile localGroovy()
+    implementation localGroovy()
 }
 
 repositories {
@@ -23,7 +23,7 @@ uploadArchives {
         mavenDeployer {
             pom.groupId = 'com.aprz.module.manager'
             pom.artifactId = 'autoc'
-            pom.version = '1.5.5'
+            pom.version = '1.5.6'
             //提交到远程服务器：
 //             repository(url: "") {
 //                authentication(userName: "", password: "")
